--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "types": "dist/index",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "tsc": "tsc"
+    "build": "webpack --mode=production",
+    "dev": "webpack --mode=development",
+    "watch": "webpack --mode=development --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -14,7 +15,10 @@
     "@babel/preset-react": "^7.12.10",
     "@types/react": "^17.0.0",
     "babel-loader": "^8.2.2",
+    "clsx": "^2.1.0",
     "css-loader": "^5.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
@@ -22,13 +26,12 @@
     "webpack-cli": "^4.4.0"
   },
   "peerDependencies": {
-    "react": "*"
+    "clsx": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+  "dependencies": {}
 }
