--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "babel-loader": "^8.2.2",
     "clsx": "^2.1.0",
     "css-loader": "^5.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
@@ -26,9 +24,9 @@
     "webpack-cli": "^4.4.0"
   },
   "peerDependencies": {
-    "clsx": "^2.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "clsx": "2.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "files": [
     "dist"
