--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-lib",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/index",
   "types": "dist/index",
   "license": "MIT",
@@ -17,6 +17,8 @@
     "babel-loader": "^8.2.2",
     "clsx": "^2.1.0",
     "css-loader": "^5.0.1",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
