--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "types": "dist/index",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode=production",
-    "dev": "webpack --mode=development",
-    "watch": "webpack --mode=development --watch"
+    "build:production": "webpack --mode=production",
+    "build:dev": "webpack --mode=development",
+    "watch": "webpack --mode=development --watch",
+    "build": "yarn remove-react-dependencies && yarn build:production",
+    "play-storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "add-react-dependencies": "yarn add react react-dom -D",
+    "remove-react-dependencies": "yarn remove react react-dom",
+    "storybook": "yarn install && yarn add-react-dependencies && yarn play-storybook"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -15,12 +21,20 @@
     "@babel/preset-react": "^7.12.10",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@storybook/addon-essentials": "^7.6.13",
+    "@storybook/addon-interactions": "^7.6.13",
+    "@storybook/addon-links": "^7.6.13",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/addon-styling-webpack": "^0.0.6",
+    "@storybook/blocks": "^7.6.13",
+    "@storybook/react": "^7.6.13",
+    "@storybook/react-webpack5": "^7.6.13",
+    "@storybook/test": "^7.6.13",
     "@types/react": "^17.0.0",
     "babel-loader": "^8.2.2",
     "clsx": "^2.1.0",
     "css-loader": "^5.0.1",
-    "sass": "^1.70.0",
-    "sass-loader": "^14.1.0",
+    "storybook": "^7.6.13",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
@@ -28,12 +42,12 @@
     "webpack-cli": "^4.4.0"
   },
   "peerDependencies": {
-    "clsx": "2.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "clsx": "2.1.0"
   },
   "files": [
     "dist"
   ],
-  "dependencies": {}
+  "resolutions": {
+    "jackspeak": "2.1.1"
+  }
 }
